Fix gfx::Range::ToString() to use the correct format specifier.

This bug seems to have been introduced in crrev.com/1671403002. Also added a
test which fails on the current master.

BUG=609359

Review-Url: https://codereview.chromium.org/1948283002
Cr-Commit-Position: refs/heads/master@{#391986}

Former-commit-id: 212a05f54124d15d7678afee40f91219fc90717f